--- a/src/app/modules/public/begin/saludos/saludos.component.sass
+++ b/src/app/modules/public/begin/saludos/saludos.component.sass
@@ -487,8 +487,8 @@
 @keyframes slide-in-fwd-br
     0%
         webkit-transform: translateZ(-1400px) translateY(800px) translateX(1000px)
-        ransform: translateZ(-1400px) translateY(800px) translateX(1000px)
-        pacity: 0
+        transform: translateZ(-1400px) translateY(800px) translateX(1000px)
+        opacity: 0
     100%
         -webkit-transform: translateZ(0) translateY(0) translateX(0)
         transform: translateZ(0) translateY(0) translateX(0)
