remodelación de stand

--- a/src/app/modules/public/hall/begin2/begin2.component.html
+++ b/src/app/modules/public/hall/begin2/begin2.component.html
@@ -2,11 +2,6 @@
 
 
 
-  <app-aframe-screen-board>
-
-  </app-aframe-screen-board>
-
-
 <a-scene
 
 *ngIf="this.showHall == true"
@@ -115,7 +110,7 @@ webxr="referenceSpaceType: local"
     <a-entity id="objs_entity11" position="-5.89979 -2 -5.67826" rotation="0 -2.968494336572795 0">
 
 
-      <a-entity  spot="linkto:menuBack;type:url" id="objectSignal11" rotation="0.002864788975654116 142.56106675327092 0.0005729577951308233" position="0 0 0" scale="0.5 2 1.8" gltf-model="./assets/files/3dmodel/stands/horizontal-screen/pantalla3dMenu.gltf" renderer="antialias:true; colorManagement:true; physicallyCorrectLights:true;" ></a-entity>
+      <a-entity  spot="linkto:menuBack;type:url" id="objectSignal11" static-body="sphereRadius: NaN" rotation="0.002864788975654116 -27.5 0.0005729577951308233" position="1.15332 0 2.2315" scale="0.5 2 1.8" gltf-model="./assets/files/3dmodel/stands/horizontal-screen/pantalla3dMenu.gltf" renderer="antialias:true; colorManagement:true; physicallyCorrectLights:true;" ></a-entity>
 
     </a-entity>
 
