ajustes portada inicial

--- a/src/app/components/global/principal-button/principal-button.component.sass
+++ b/src/app/components/global/principal-button/principal-button.component.sass
@@ -157,7 +157,7 @@ a.boton
         display: block
         position: absolute
         top: .3125rem
-        left: .125rem
+        left: 3.5px
         height: 6.75rem
         background: -webkit-gradient(linear, left top, left bottom, from(white), to(rgba(255, 255, 255, 0)))
         background: linear-gradient(to bottom, #fff 0, rgba(255, 255, 255, 0) 100%)
