--- a/src/app/modules/public/begin/begin.component.sass
+++ b/src/app/modules/public/begin/begin.component.sass
@@ -157,13 +157,15 @@
             margin-bottom: 5%
             img
                 display: block
-                height: 275px
+                height: 400px
                 margin: 0 auto
                 margin-bottom: 15px
                 @include responsivo(telefonoTable)
                     height: 175px
                 @include responsivo(pcMedio)
                     height: 175px
+                @include responsivo(general)
+                    height: 350px
     .accion
         // height: 75px
         z-index: 1
