--- a/src/app/modules/public/begin/begin.component.html
+++ b/src/app/modules/public/begin/begin.component.html
@@ -31,14 +31,14 @@
 
   </div>
   <div
-  style="background-image: url('/assets/files/images/central_begin_portrait.jpg');"
+  style="background-image: url('/assets/files/images/theatre_lines.png');"
   class="central">
 
     <div class="advertencia animate__animated " [ngClass]="{'animate__fadeOut': (this.counter.sec >= 5)? true: false }">
       <img src="/assets/files/elements/iconsLogos/Audi.png" alt="">
       <h6 class="advertencia">
         Para una mejor experiencia, recomendamos <br>
-        usar audífonos y apagar las luces
+        usar audífonos
       </h6>
     </div>
 
